// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DurationInput/> tests component tests renders with given value (in time format) 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="bp4-input-group"
      >
        <input
          class="bp4-input"
          placeholder="Enter w/d/h/m/s/ms"
          type="text"
          value="2d 2h"
        />
      </div>
    </div>
    <span
      aria-haspopup="true"
      class="helpIcon bp4-popover2-target"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="question"
        tabindex="0"
      >
        <svg
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
            fill="#9AA5B5"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DurationInput/> tests component tests renders with given value 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="bp4-input-group"
      >
        <input
          class="bp4-input"
          placeholder="Enter w/d/h/m/s/ms"
          type="text"
          value="1d 10h 17m 36s 789ms"
        />
      </div>
    </div>
    <span
      aria-haspopup="true"
      class="helpIcon bp4-popover2-target"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="question"
        tabindex="0"
      >
        <svg
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
            fill="#9AA5B5"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DurationInput/> tests component tests shows help popover 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="bp4-input-group"
      >
        <input
          class="bp4-input"
          placeholder="Enter w/d/h/m/s/ms"
          type="text"
          value="1d 10h 17m 36s 789ms"
        />
      </div>
    </div>
    <span
      aria-haspopup="true"
      class="helpIcon bp4-popover2-target"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="question"
        tabindex="0"
      >
        <svg
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
            fill="#9AA5B5"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DurationInput/> tests component tests shows subset of allowed values in help popover 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="bp4-input-group"
      >
        <input
          class="bp4-input"
          placeholder="Enter w/d/h/m/s/ms"
          type="text"
          value="1d 10h 17m 36s 789ms"
        />
      </div>
    </div>
    <span
      aria-haspopup="true"
      class="helpIcon bp4-popover2-target"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="question"
        tabindex="0"
      >
        <svg
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
            fill="#9AA5B5"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DurationInput/> tests component tests shows warning when intended variable value is invalid due to no closing brace 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="bp4-input-group"
      >
        <input
          class="bp4-input"
          data-testid="input"
          placeholder="Enter w/d/h/m/s/ms"
          style="padding-right: 0px;"
          type="text"
          value="\${abc"
        />
        <span
          class="bp4-input-action"
        >
          <span
            aria-hidden="true"
            class="bp4-icon bp4-icon-warning-sign StyledProps--main warnIcon"
            icon="warning-sign"
          >
            <svg
              data-icon="warning-sign"
              height="12"
              role="img"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <span
      aria-haspopup="true"
      class="helpIcon bp4-popover2-target"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="question"
        tabindex="0"
      >
        <svg
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
            fill="#9AA5B5"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DurationInput/> tests component tests shows warning when invalid value is not inside allowedUnits 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="bp4-input-group"
      >
        <input
          class="bp4-input"
          data-testid="input"
          placeholder="Enter w/d/h/m/s/ms"
          style="padding-right: 0px;"
          type="text"
          value="1s"
        />
        <span
          class="bp4-input-action"
        >
          <span
            aria-hidden="true"
            class="bp4-icon bp4-icon-warning-sign StyledProps--main warnIcon"
            icon="warning-sign"
          >
            <svg
              data-icon="warning-sign"
              height="12"
              role="img"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <span
      aria-haspopup="true"
      class="helpIcon bp4-popover2-target"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="question"
        tabindex="0"
      >
        <svg
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
            fill="#9AA5B5"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DurationInput/> tests component tests shows warning when invalid value is present 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="main"
    >
      <div
        class="bp4-input-group"
      >
        <input
          class="bp4-input"
          data-testid="input"
          placeholder="Enter w/d/h/m/s/ms"
          style="padding-right: 0px;"
          type="text"
          value="1"
        />
        <span
          class="bp4-input-action"
        >
          <span
            aria-hidden="true"
            class="bp4-icon bp4-icon-warning-sign StyledProps--main warnIcon"
            icon="warning-sign"
          >
            <svg
              data-icon="warning-sign"
              height="12"
              role="img"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <span
      aria-haspopup="true"
      class="helpIcon bp4-popover2-target"
    >
      <span
        class="bp4-icon StyledProps--main"
        data-icon="question"
        tabindex="0"
      >
        <svg
          height="14"
          viewBox="0 0 14 14"
          width="14"
        >
          <path
            d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
            fill="#9AA5B5"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
